--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -18,7 +18,7 @@
 	<p></p>
 	<div class="jumbotron">
 		<h1>MyBlog</h1>
-		<h3>my first example ruby and rails for coderschool</h3>
+		<h3>My first example ruby and rails for CoderSchool</h3>
 		
 	</div>
 	<div class="jumbotron">
