--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -21,10 +21,6 @@
 		<h3>My first example ruby and rails for CoderSchool</h3>
 		
 	</div>
-	<div class="jumbotron">
-		<img width="600px" src="http://www.cockos.com/licecap/licecap_rules.gif" alt="">
-	</div>
-
 	<div class="row">
 		<div class="col-sm-12">
 			<center>
@@ -32,4 +28,8 @@
 			</center>
 		</div>
 	</div>
+	<p></p>
+	<div class="jumbotron">
+		<img width="600px" src="/myblog.gif" alt="">
+	</div>	
 </div>
