--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -20,6 +20,6 @@
     <%= f.text_area :body, class: "form-control" %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class:"btn btn-outline-primary btn-lg" %>
   </div>
 <% end %>
